chore: apply linbus